--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fuzzy-search": "^3.2.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "react-autosuggest": "^10.0.2",
     "react-notifications-component": "^2.4.0",
     "socket.io": "^2.3.0"
   }
