--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.22.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -21,8 +22,11 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "nodemailer": "^6.4.11",
     "react-autosuggest": "^10.0.2",
+    "react-bootstrap": "^1.3.0",
     "react-notifications-component": "^2.4.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "xoauth2": "^1.2.0"
   }
 }
